[metadata]
name = cinder-hnas-plugin
version = 0.0.1
summary = Cinder HNAS Plugin for Tempest with internal test cases
description-file = README.rst
author = Lyly
author-email = FIT@fit.com
classifier =
    Development Status :: 4 - Pre-Alpha_OMG
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack
    Cinder

[entry_points]
tempest.test_plugins =
    cinder-hnas-plugin = cinder_hnas_plugin.plugin:HNASPlugin

[pbr]
warnerrors = true
